# px-widget-style

./: .gitlab-ci.yml  CMakeLists.txt
colors/: BreezeDark.colors  CMakeLists.txt
colors-px/: CMakeLists.txt  PantherXBright.colors  PantherXDark.colors  breeze-default-colorscheme.desktop  kdeglobals
misc/kde4breeze/src/: CMakeLists.txt  main.cpp
